--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ header {
     text-align: center;
     padding: 20px;
 }
+
+/*.bg-image{
+    background-size: cover;
+    min-height: 60vh;
+    position: relative;
+    color: black;
+    text-shadow: 2px 2px 2px rgba(red, green, blue, alpha);
+}/*
